# wzcc

./: Cargo.toml  README.md
.beads/: issues.jsonl
.claude/skills/publish/: SKILL.md
src/: config.rs  lib.rs  pty.rs
src/cli/: install_bridge.rs  mod.rs
src/session_mapping/: mod.rs
src/transcript/: info.rs  parser.rs  session_info.rs
src/ui/: app.rs  event.rs  input_buffer.rs  markdown.rs  mod.rs  render.rs  terminal_session.rs
src/ui/app/: actions.rs  navigation.rs  runtime.rs
src/ui/render/: command_select.rs  footer.rs  history.rs  live.rs  summary.rs  terminal.rs
