[package]
name = "wzcc"
version = "0.1.1"
edition = "2021"
description = "A TUI tool to list and navigate Claude Code sessions running in WezTerm"
license = "MIT"
repository = "https://github.com/K-dash/wzcc"
homepage = "https://github.com/K-dash/wzcc"
readme = "README.md"
keywords = ["wezterm", "claude-code", "tui", "terminal", "session-manager"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
dirs = "5.0"
base64 = "0.22"
toml = "0.8"
unicode-width = "0.2"
pulldown-cmark = "0.13"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
syntect-tui = "3.0"
ansi-to-tui = "8.0"
ratatui-core = "0.1"
portable-pty = "0.9"
vt100 = "0.15"

[dev-dependencies]
tempfile = "3.10"
